@@ -289,6 +289,8 @@ https://github.com/olikraus/u8g2 ChangeLog
   * ST7567 ERC13232 (issue 1869)
   * ST7920 160x32 (issue 1873)
   * ST7586 JLX384160 (issue 1932)
+  * LC7981 128X128, NOT TESTED (issue 1913)
   * Added support for IST3088 (issue 1887) 
   * Added support for GP1287AI (issue 1907)
   * Double size font functions: drawGlyphX2, drawStrX2, drawUTF8X2 (issue 1919)
+  * Experimental support for ST75160, TESTING REQUIRED (issue 1642)
